k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elevator-system
  labels:
    name: elevator-system
    app: elevator-system
